practices and lessons

--- a/Práctica_01(1).ipynb
+++ b/Práctica_01(1).ipynb
@@ -171,11 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('j', 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "d = {'a': 5, 'b': 10, 'c': 12, 'd': 11, 'e': 15, 'f': 20, 'g': 15, 'h': 9, 'i': 7, 'j': 2}"
+    "d = {'a': 5, 'b': 10, 'c': 12, 'd': 11, 'e': 15, 'f': 20, 'g': 15, 'h': 9, 'i': 7, 'j': 2}\n",
+    "print(max(d.items()))"
    ]
   },
   {
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -228,6 +237,10 @@
     }
    ],
    "source": [
+    "def histograma_horizontal(diccionario):\n",
+    "    sorted(diccionario)\n",
+    "    for (nombre, values) in diccionario.items():\n",
+    "        print(nombre, \": \", values*\"*\")\n",
     "\n",
     "histograma_horizontal(d)"
    ]
@@ -272,20 +285,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def histograma_vertical2(diccionario):\n",
+    "    hmax=max(diccionario.values())\n",
+    "    #print(hmax)\n",
+    "    \n",
+    "    for h in reversed(range(1,hmax+1)):      \n",
+    "        nivel= \"\"\n",
+    "        for num_asterisco in diccionario.values():\n",
+    "           # print(valor)\n",
+    "            if  num_asterisco >= h:\n",
+    "                nivel += \"* \"\n",
+    "       \n",
+    "            else:\n",
+    "                nivel += \"  \"\n",
+    "        \n",
+    "        print(nivel)\n",
+    "    names=list(diccionario.keys())\n",
+    "    string_names=\" \".join(names)\n",
+    "    print(string_names)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "          *         \n",
       "          *         \n",
       "          *         \n",
       "          *         \n",
@@ -305,13 +338,12 @@
       "* * * * * * * * *   \n",
       "* * * * * * * * * * \n",
       "* * * * * * * * * * \n",
-      "* * * * * * * * * * \n",
       "a b c d e f g h i j\n"
      ]
     }
    ],
    "source": [
-    "histograma_vertical(d)"
+    "histograma_vertical2(d)"
    ]
   },
   {
