--- a/intro_biopython_enunciado.ipynb
+++ b/intro_biopython_enunciado.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,18 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Entrez' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-9dbc5c800f1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Estas lineas nos dan un listado de bases de datos disponibles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mhandle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEntrez\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meinfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mrec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEntrez\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Entrez' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'DbList': ['pubmed', 'protein', 'nuccore', 'ipg', 'nucleotide', 'structure', 'genome', 'annotinfo', 'assembly', 'bioproject', 'biosample', 'blastdbinfo', 'books', 'cdd', 'clinvar', 'gap', 'gapplus', 'grasp', 'dbvar', 'gene', 'gds', 'geoprofiles', 'homologene', 'medgen', 'mesh', 'nlmcatalog', 'omim', 'orgtrack', 'pmc', 'popset', 'proteinclusters', 'pcassay', 'protfam', 'pccompound', 'pcsubstance', 'seqannot', 'snp', 'sra', 'taxonomy', 'biocollections', 'gtr']}\n"
      ]
     }
    ],
@@ -160,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +199,7 @@
        "1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +312,7 @@
        "Seq('AAC')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +333,7 @@
        "52.239757691694564"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,14 +351,14 @@
     "## Ejercicio 1:\n",
     "\n",
     "\n",
-    "* Descargar de la NCBI mediante Biopython el genoma del lamda fago (NC_001416).\r",
+    "* Descargar de la NCBI mediante Biopython el genoma del lamda fago (NC_001416).\n",
     "* \n",
     "Salva el genoma en un fichero FASTA\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -399,16 +395,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1.0\n"
+      "1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -419,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,14 +541,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26\n"
+      "26\n",
+      "{}\n",
+      "{'hola': 22}\n"
      ]
     }
    ],
@@ -552,57 +559,52 @@
     "buenas = 2*10\n",
     "hola += buenas\n",
     "hola +=1\n",
-    "print(hola)"
+    "print(hola)\n",
+    "adios = {}\n",
+    "print(adios)\n",
+    "adios[\"hola\"]=22\n",
+    "print(adios)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CON UNA LISTA\n",
     "def get_local_GC(dna_sequence, window_length, offset):\n",
-    "    lowest = 1\n",
+    "    lowest = 0\n",
     "    highest = window_length\n",
     "    local_GC = []\n",
-    "    positions = []\n",
-    "    i = 1\n",
-    "    while highest <= len(dna_sequence):\n",
-    "        local_GC[i] = GC(dna_sequence[lowest:highest])\n",
-    "        positions[i] = lowest\n",
+    "    # positions = []\n",
+    "    # i = 0\n",
+    "    while highest < len(dna_sequence):\n",
+    "        # local_GC.append(GC(dna_sequence[lowest:highest]))\n",
+    "        # positions.append(lowest)\n",
+    "        local_GC.append((GC(dna_sequence[lowest:highest]), lowest))\n",
     "        lowest += offset\n",
-    "        highest += highest + offset\n",
-    "        i += 1\n",
-    "    print(list(local_GC, positions))\n",
-    "    \n",
+    "        highest += offset\n",
+    "        #i += 1\n",
+    "    return local_GC\n",
+    "\n",
+    "# CON UN DICCIONARIO.\n",
+    "def get_local_GC_2(seq, window_length, offset):\n",
+    "    lowest = 0\n",
+    "    highest = window_length\n",
+    "    local_GC = {}\n",
+    "    while highest < len(seq):\n",
+    "        local_GC[lowest]= GC(seq[lowest:highest])\n",
+    "        lowest += offset\n",
+    "        highest += offset\n",
+    "    return local_GC\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[93], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_local_GC\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlamda_phago_seq\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[92], line 8\u001b[0m, in \u001b[0;36mget_local_GC\u001b[1;34m(dna_sequence, window_length, offset)\u001b[0m\n\u001b[0;32m      6\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m highest \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(dna_sequence):\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mlocal_GC\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m GC(dna_sequence[lowest:highest])\n\u001b[0;32m      9\u001b[0m     positions[i] \u001b[38;5;241m=\u001b[39m lowest\n\u001b[0;32m     10\u001b[0m     lowest \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m offset\n",
-      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "get_local_GC(lamda_phago_seq,10000,1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -649,9 +651,31 @@
        " 38000: 47.32}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_local_GC(lamda_phago_seq,10000,1000)\n",
+    "get_local_GC_2(lamda_phago_seq,10000,1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_local_GC_bis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_local_GC_bis\u001b[49m(lambda_phage_seq,\u001b[38;5;241m10000\u001b[39m,\u001b[38;5;241m1000\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_local_GC_bis' is not defined"
+     ]
     }
    ],
    "source": [
@@ -670,55 +694,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# MODELOS MARKOVIANOS\n",
+    "# Un vector de probabilidades iniciales. \n",
+    "# Una matriz de transición, que son las probabilidades de los dímeros.\n",
+    "# 1 contar num dimeros dentro de la seq, luego dividir entre número total de dímeros\n",
+    "# que empiezan por esa letra. (Freq abs de todos los dímeros).\n",
+    "#      freq(\"aa\")=1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd']\n",
+      "b\n",
+      "ab\n"
+     ]
+    }
+   ],
+   "source": [
+    "nucleotides = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "print(nucleotides)\n",
+    "print(nucleotides[1])\n",
+    "dimer1 = nucleotides[0] + nucleotides[1]\n",
+    "print(dimer1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AA', 'AG', 'AT', 'AC', 'GA', 'GG', 'GT', 'GC', 'TA', 'TG', 'TT', 'TC', 'CA', 'CG', 'CT', 'CC']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nucleotides = [\"A\", \"C\", \"G\", \"T\"]\n",
+    "\n",
+    "def count_dimers(nucleotides):\n",
+    "    nucleotides = \"AGTC\"\n",
+    "    dimers = []\n",
+    "    freq_abs = {}\n",
+    "    for i in range(len(nucleotides)):\n",
+    "        for j in range(len(nucleotides)):\n",
+    "            dimers.append(nucleotides[i] + nucleotides[j])\n",
+    "    print(dimers)\n",
+    "\n",
+    "dimers = count_dimers(nucleotides)\n",
+    "\n",
+    "def dimer_prob(dna_seq):\n",
+    "    nucleotides = \"AGTC\"\n",
+    "    dimers = []\n",
+    "    freq_abs = {}\n",
+    "    for i in range(len(nucleotides)):\n",
+    "        for j in range(len(nucleotides)):\n",
+    "            dimers.append(nucleotides[i] + nucleotides[j])\n",
+    "    print(dimers)\n",
+    "    prob = {}\n",
+    "    for k in range(len(dimers)):\n",
+    "        prob[dimers[k]] = dna_seq.count(dimers[k])\n",
+    "    return(prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AA', 'AG', 'AT', 'AC', 'GA', 'GG', 'GT', 'GC', 'TA', 'TG', 'TT', 'TC', 'CA', 'CG', 'CT', 'CC']\n",
+      "['AA', 'AG', 'AT', 'AC', 'GA', 'GG', 'GT', 'GC', 'TA', 'TG', 'TT', 'TC', 'CA', 'CG', 'CT', 'CC']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "({'A': 0.2542987918023999,\n",
-       "  'C': 0.23425838109768668,\n",
-       "  'G': 0.2643189971547565,\n",
-       "  'T': 0.24712382994515691},\n",
-       " {'GG': 1.1488439306358382,\n",
-       "  'GC': 1.3059971098265897,\n",
-       "  'CG': 1.2275236593059937,\n",
-       "  'GA': 1.176300578034682,\n",
-       "  'AC': 0.77105184297273,\n",
-       "  'CC': 0.9846214511041009,\n",
-       "  'CT': 1.0,\n",
-       "  'TC': 0.8002989536621824,\n",
-       "  'GT': 1.0,\n",
-       "  'TT': 1.0,\n",
-       "  'TA': 0.648729446935725,\n",
-       "  'AT': 1.0,\n",
-       "  'TG': 1.1342301943198805,\n",
-       "  'AA': 1.1063829787234043,\n",
-       "  'AG': 0.818699430626311,\n",
-       "  'CA': 1.2681388012618298})"
+       "{'AA': 2770,\n",
+       " 'AG': 2732,\n",
+       " 'AT': 3337,\n",
+       " 'AC': 2573,\n",
+       " 'GA': 3256,\n",
+       " 'GG': 2678,\n",
+       " 'GT': 2768,\n",
+       " 'GC': 3615,\n",
+       " 'TA': 2170,\n",
+       " 'TG': 3794,\n",
+       " 'TT': 2529,\n",
+       " 'TC': 2677,\n",
+       " 'CA': 3216,\n",
+       " 'CG': 3113,\n",
+       " 'CT': 2536,\n",
+       " 'CC': 2143}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_markovian_model(lambda_phage_seq)"
+    "count_dimers(lamda_phago_seq)\n",
+    "dimer_prob(lamda_phago_seq)\n",
+    "\n",
+    "#get_markovian_model(lambda_phage_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'GG': 1}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count2(seq):\n",
+    "    dimeros = {}\n",
+    "    for i in range(0, len(seq)-1):\n",
+    "        key = seq[i] + seq[i+1]\n",
+    "        if key in dimeros:\n",
+    "            dimeros[key] += 1\n",
+    "        else:\n",
+    "            dimeros[key] = 1\n",
+    "        return(dimeros)\n",
+    "\n",
+    "count2(lamda_phago_seq)"
    ]
   }
  ],
